<package>
  <name>velo_mapping</name>
  <version>0.0.28</version>
  <description>Velodyne 16 Mapping and Localization</description>
  <maintainer email="avavav@sg.com">Unknown</maintainer>
  <license>Unknown</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>velo_mapping_mcl</run_depend>
  <run_depend>velo_mapping_fuser</run_depend>
  <run_depend>velo_mapping_registration</run_depend>
  <run_depend>velo_mapping_map</run_depend>
  <run_depend>velo_mapping_visualization</run_depend>
  <build_depend>cmake_modules</build_depend>
  <!-- Dependencies needed only for running tests. -->
 <export> <metapackage/> </export>
</package>
