<package>
  <name>velo_mapping_fuser</name>
  <version>0.0.28</version>
  <description>App to create map from velodyne data</description>
  <maintainer email="avavav@sg.com">Unknown</maintainer>
  <license>Unknown</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>velo_mapping_registration</build_depend>
  <build_depend>velo_mapping_map</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>velo_mapping_visualization</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>velo_mapping_registration</run_depend>
  <run_depend>velo_mapping_map</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>velo_mapping_visualization</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>cmake_modules</build_depend>

<!--export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib" cflags="-I${prefix}/include"/>
</export-->

</package>
