<package>
  <name>velo_mapping_mcl</name>
  <version>0.0.28</version>
  <description>velo_mapping_mcl</description>
  <maintainer email="avavav@sg.com">Unknown</maintainer>
  <license>Unknown</license>
  
  <url type="website">http://ros.org/wiki/ndt_mcl</url>
  <!-- <url type="bugtracker"></url> -->
  
  
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>velo_mapping_visualization</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>velo_mapping_map</build_depend>
  <build_depend>velo_mapping_registration</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mrpt</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>cmake_modules</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>velo_mapping_visualization</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>velo_mapping_map</run_depend>
  <run_depend>velo_mapping_registration</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>mrpt</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>libxmu-dev</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>ndt_visualisation</test_depend> -->
  <!-- <test_depend>rosbag</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>message_filters</test_depend> -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>ndt_map</test_depend> -->
  <!-- <test_depend>ndt_registration</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

<!--export>
    <cpp lflags="-L${prefix}/lib" cflags="-I${prefix}/src"/>
</export-->

</package>
