<package>
  <name>velo_mapping_visualization</name>
  <version>0.0.28</version>
  <description>Contains classes for creating an ndt visualization window. Initial implementation on top of mrpt.</description>
  <maintainer email="avavav@sg.com">Unknown</maintainer>
  <license>Unknown</license>

  <url type="website">http://ros.org/wiki/ndt_visualization</url>
  <!-- <url type="bugtracker"></url> -->


  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <!--<build_depend>common_rosdeps</build_depend>-->
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>velo_mapping_map</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>opengl</build_depend>
  <!--build_depend>freeglut3-dev</build_depend-->
  <build_depend>libxmu-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>cmake_modules</build_depend>	
  <!-- Dependencies needed after this package is compiled. -->
  <!--<run_depend>common_rosdeps</run_depend>-->
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>velo_mapping_map</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>opengl</run_depend>
  <run_depend>message_runtime</run_depend>

  <!--run_depend>freeglut3-dev</run_depend-->
  

<!-- export>
    <cpp lflags="-L${prefix}/lib -lndt_visualisation " cflags="-I${prefix}/include"/>
</export -->

</package>
